[package]
name = "integrity_check_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_ops = "0.1.13"
embedded-can = "0.4.1"
# can = "0.2.0"
num = { version = "0.4", default-features = false }
